feat: make domain catalog and update and fix another domain
